# GPTUI

./: .gitignore  Cargo.toml  README.md  test.json
src/: config.rs  lib.rs  main.rs  paths.rs  request.rs
src/cli/: command_functions.rs  input.rs  mod.rs
src/cli/commands/: basic.rs  chat_session.rs  command_functions.rs  mod.rs
src/cli/input/: gptui_cmd.rs  input_backup.rs  mod.rs
src/cli/input/chat_sub_cmd/: clear_cmd.rs  list_cmd.rs  load_cmd.rs  mod.rs  save_cmd.rs  show_cmd.rs  start_cmd.rs
src/cli/input/gptui_sub_cmd/: chat_cmd.rs  config_cmd.rs  history_cmd.rs  mod.rs  msg_cmd.rs  open_cmd.rs
src/open_ai/: chat.rs  mod.rs  objects.rs  request.rs  stream_types.rs
