[package]
name = "gpt_tui"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.26"
dotenv = "0.15.0"
futures-util = "0.3.28"
reqwest = { version = "0.11.18", features = ["json", "stream"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.100"
tokio = { version = "1.29.1", features = ["full"] }
