[package]
name = "gptui"
version = "0.1.0"
edition = "2021"

[dependencies]
app_dirs2 = "2.5.5"
chrono = "0.4.26"
clap = { version = "4.3.12", features = ["derive"] }
futures-util = "0.3.28"
reqwest = { version = "0.11.18", features = ["json", "stream"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.100"
tokio = { version = "1.29.1", features = ["full"] }
toml = "0.7.6"
